# yt-downloader

./: .gitignore
src/auth/: Dockerfile  init.sql  pyproject.toml
src/auth/auth/: main.py
src/auth/manifests/: auth-deploy.yaml
